--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "gsap": "^3.13.0",
     "idb": "^8.0.3",
     "lucide-react": "^0.554.0",
     "react": "^19.1.1",
